--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -14,7 +14,7 @@ This series is going to start out intentionally pedantic and simple, to frame th
 
 * [Part 3/x: Organizing the data into tries.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-3-organizing-the-data-into-tries)
 
-* Part 4/x: Adding an index.
+* [Part 4/x: Adding an index.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-4-adding-an-index)
 
 * Part 5/x: Navigation rather than enumeration
 
@@ -1400,7 +1400,293 @@ So, good news and improvements for our target application, where we have these h
 
 ## Part 4: Adding an index.
 
-Coming even later!
+We now move on to thinking about getting data back out of a `Trace`. For the moment, we are just going to think about getting our fingers on the data, not about actually using it. Our look-up experiments will be to fill the collection as we have done up above, rounds of waves of batches of inserts, with varying numbers of keys and values, and after each round do some random look-ups (usually 1000) and report the throughput.
+
+The fastest way to do look-ups is probably a `HashMap` or something like it. Let's measure this, then.
+
+	Echidnatron% cargo run --release --bin profile-lookup -- 1000 1000 1000 1000 hash
+	     Running `target/release/profile-lookup 1000 1000 1000 1000 hash`
+	throughput: 40115532.73 elts/sec @ 1000000 elts
+	throughput: 40160642.57 elts/sec @ 2000000 elts
+	throughput: 39953653.76 elts/sec @ 3000000 elts
+	throughput: 40444893.83 elts/sec @ 4000000 elts
+	throughput: 40180006.43 elts/sec @ 5000000 elts
+	...
+	throughput: 34115720.52 elts/sec @ 522000000 elts
+	throughput: 35321959.66 elts/sec @ 523000000 elts
+	throughput: 35181536.73 elts/sec @ 524000000 elts
+
+These are great numbers! 35-40 million look-ups per seconds is wonderful. This is possible because our use of the data is currently just to report the number of elements, which as part of the `Vec` struct actually lives in the `HashMap` allocation rather than on the other end of some pointers. With only one thousand keys, the working set for look-ups is really quite small, because we aren't actually looking at most of the data yet.
+
+Here are some numbers with 16 million keys.
+
+	Echidnatron% cargo run --release --bin profile-lookup -- 16000000 1000 1000 1000 hash
+	     Running `target/release/profile-lookup 16000000 1000 1000 1000 hash`
+	throughput: 9111285.24 elts/sec @ 1000000 elts
+	throughput: 7974799.63 elts/sec @ 2000000 elts
+	throughput: 7672948.25 elts/sec @ 3000000 elts
+	throughput: 6695950.29 elts/sec @ 4000000 elts
+	throughput: 6978415.76 elts/sec @ 5000000 elts
+	...
+	throughput: 3833473.89 elts/sec @ 522000000 elts
+	throughput: 3611529.45 elts/sec @ 523000000 elts
+	throughput: 2874240.48 elts/sec @ 524000000 elts
+
+These have dropped by an order of magnitude, as the look-ups now have to hit in a much larger set. They still don't touch the real volume of `(V, T, isize)` data, staying in a several hundred megabytes working set.
+
+How about our sorted list implementation? We were going to take each of our lists and do a binary search (or two) to find the range of tuples associated with a key, right? That sounds like a good way to start.
+
+	Echidnatron% cargo run --release --bin profile-lookup -- 1000 1000 1000 1000 lists
+	     Running `target/release/profile-lookup 1000 1000 1000 1000 lists`
+	throughput: 313602.61 elts/sec @ 1000000 elts
+	throughput: 274131.52 elts/sec @ 2000000 elts
+	throughput: 258997.11 elts/sec @ 3000000 elts
+	throughput: 251680.47 elts/sec @ 4000000 elts
+	throughput: 281871.57 elts/sec @ 5000000 elts
+	...
+	throughput: 67968.46 elts/sec @ 522000000 elts
+	throughput: 64092.42 elts/sec @ 523000000 elts
+	throughput: 62579.01 elts/sec @ 524000000 elts
+
+And now with 16 million keys:
+
+	Echidnatron% cargo run --release --bin profile-lookup -- 16000000 1000 1000 1000 lists
+	     Running `target/release/profile-lookup 16000000 1000 1000 1000 lists`
+	throughput: 3654503.26 elts/sec @ 1000000 elts
+	throughput: 2756537.13 elts/sec @ 2000000 elts
+	throughput: 2186418.41 elts/sec @ 3000000 elts
+	throughput: 1983977.40 elts/sec @ 4000000 elts
+	throughput: 1806071.29 elts/sec @ 5000000 elts
+	...
+	throughput: 85581.92 elts/sec @ 522000000 elts
+	throughput: 74162.77 elts/sec @ 523000000 elts
+	throughput: 95654.47 elts/sec @ 524000000 elts
+
+Well, these numbers aren't great. They make sense, though. When we start out, we have not so many lists, each with not so many elements. As we move along, we have a whole bunch more data to look through for each key. Also, you can see that it actually ends up a bit faster with 16 million keys, which might seem counter-intuitive, but really when we look up a key we need to find the start and end of the range for a key, and with 16 million keys these are closer together for each key.
+
+How about our trie implementation, which has keys separate from the bulk of the data, like the `HashMap` but without its random access?
+
+	Echidnatron% cargo run --release --bin profile-lookup -- 1000 1000 1000 1000 tries
+	     Running `target/release/profile-lookup 1000 1000 1000 1000 tries`
+	throughput: 2640013.09 elts/sec @ 1000000 elts
+	throughput: 2624299.97 elts/sec @ 2000000 elts
+	throughput: 2389366.36 elts/sec @ 3000000 elts
+	throughput: 2645138.76 elts/sec @ 4000000 elts
+	throughput: 3063387.62 elts/sec @ 5000000 elts
+	...
+	throughput: 1504786.73 elts/sec @ 523000000 elts
+	throughput: 1547709.70 elts/sec @ 524000000 elts
+	throughput: 3046653.40 elts/sec @ 525000000 elts
+	...
+	throughput: 1489857.79 elts/sec @ 1046000000 elts
+	throughput: 1453179.99 elts/sec @ 1047000000 elts
+	throughput: 1554332.47 elts/sec @ 1048000000 elts
+
+We are up in the millions of lookups per second again, though nowhere near the 35-40 million per second that `HashMap` does for the same number of keys. One thing to note, perhaps, is that at 524 million we have a big consolidation of lists; we move from one list at each power-of-two length, to one larger one. This is why the other techniques bail at this point. Here we notice a marked improvement in query latency, as the number of lists to search drops substantially. 
+
+	Echidnatron% cargo run --release --bin profile-lookup -- 16000000 1000 1000 1000 tries
+	     Running `target/release/profile-lookup 16000000 1000 1000 1000 tries`
+	throughput: 6099829.81 elts/sec @ 1000000 elts
+	throughput: 4348922.77 elts/sec @ 2000000 elts
+	throughput: 3354511.48 elts/sec @ 3000000 elts
+	throughput: 2985698.50 elts/sec @ 4000000 elts
+	throughput: 2724728.82 elts/sec @ 5000000 elts
+	...
+	throughput: 191675.05 elts/sec @ 524000000 elts
+	throughput: 428941.18 elts/sec @ 525000000 elts
+	throughput: 922347.56 elts/sec @ 526000000 elts
+	...
+	throughput: 175878.04 elts/sec @ 1046000000 elts
+	throughput: 171276.22 elts/sec @ 1047000000 elts
+	throughput: 169637.21 elts/sec @ 1048000000 elts
+
+This is clearly ends up less impressive than when we had fewer keys, despite starting well (due to missing on some keys, I bet), though it is better than the `Lists` implementation. These numbers are more than 10x slower than the `HashMap` implementation, which has to poke around in about the same amount of data. The difference is that each binary search hits the data several times, and we need to do several of them.
+
+### Batching look-ups
+
+One thing that does improve with `Lists` and `Tries` are batches of queries, where we have the opportunity to sort the queries within a batch. Let's try that; there are 1000 queries for random keys in each batch, so this should work "great" with 1000 keys:
+
+	Echidnatron% cargo run --release --bin profile-lookup -- 1000 1000 1000 1000 lists sort
+	     Running `target/release/profile-lookup 1000 1000 1000 1000 lists sort`
+	throughput: 593154.64 elts/sec @ 1000000 elts
+	throughput: 525547.11 elts/sec @ 2000000 elts
+	throughput: 513238.21 elts/sec @ 3000000 elts
+	throughput: 459265.87 elts/sec @ 4000000 elts
+	throughput: 530989.62 elts/sec @ 5000000 elts
+	...
+	throughput: 124565.39 elts/sec @ 522000000 elts
+	throughput: 132066.36 elts/sec @ 523000000 elts
+	throughput: 114911.01 elts/sec @ 524000000 elts
+
+About a 2x improvement. And for tries:
+
+	Echidnatron% cargo run --release --bin profile-lookup -- 1000 1000 1000 1000 tries sort
+	     Running `target/release/profile-lookup 1000 1000 1000 1000 tries sort`
+	throughput: 4169307.23 elts/sec @ 1000000 elts
+	throughput: 4109003.65 elts/sec @ 2000000 elts
+	throughput: 3865003.17 elts/sec @ 3000000 elts
+	throughput: 4189710.07 elts/sec @ 4000000 elts
+	throughput: 4736911.91 elts/sec @ 5000000 elts
+	...
+	throughput: 2220440.94 elts/sec @ 523000000 elts
+	throughput: 2326403.75 elts/sec @ 524000000 elts
+	throughput: 4669515.07 elts/sec @ 525000000 elts
+	...
+	throughput: 2008790.47 elts/sec @ 1046000000 elts
+	throughput: 2232048.19 elts/sec @ 1047000000 elts
+	throughput: 2278376.61 elts/sec @ 1048000000 elts
+
+Also about a 2x improvement by processing things in order.
+
+We don't expect quite as great a result for 16 million keys, because each key is sufficiently different that processing them in order doesn't help quite as much.
+
+	Echidnatron% cargo run --release --bin profile-lookup -- 16000000 1000 1000 1000 lists sort
+	     Running `target/release/profile-lookup 16000000 1000 1000 1000 lists sort`
+	throughput: 3347291.54 elts/sec @ 1000000 elts
+	throughput: 2645019.82 elts/sec @ 2000000 elts
+	throughput: 2103053.84 elts/sec @ 3000000 elts
+	throughput: 1953128.81 elts/sec @ 4000000 elts
+	throughput: 1989570.67 elts/sec @ 5000000 elts
+	...
+	throughput: 149253.91 elts/sec @ 522000000 elts
+	throughput: 92232.88 elts/sec @ 523000000 elts
+	throughput: 120980.44 elts/sec @ 524000000 elts
+
+This is better, though perhaps not 2x better. And for tries:
+
+	Echidnatron% cargo run --release --bin profile-lookup -- 16000000 1000 1000 1000 tries sort
+	     Running `target/release/profile-lookup 16000000 1000 1000 1000 tries sort`
+	throughput: 5969864.13 elts/sec @ 1000000 elts
+	throughput: 4385387.89 elts/sec @ 2000000 elts
+	throughput: 3422735.18 elts/sec @ 3000000 elts
+	throughput: 2712452.87 elts/sec @ 4000000 elts
+	throughput: 2923292.80 elts/sec @ 5000000 elts
+	...
+	throughput: 259774.67 elts/sec @ 524000000 elts
+	throughput: 64566.67 elts/sec @ 525000000 elts
+	throughput: 1080639.48 elts/sec @ 526000000 elts
+	...
+	throughput: 236002.35 elts/sec @ 1046000000 elts
+	throughput: 233229.90 elts/sec @ 1047000000 elts
+	throughput: 233800.82 elts/sec @ 1048000000 elts
+
+These are about a 4/3x improvement. This goes up as the batch size gets larger. For example, cranking the query batch size up to 10,000 elements, we see numbers for `Tries` like:
+
+	Echidnatron% cargo run --release --bin profile-lookup -- 16000000 1000 10000 100 tries sort
+	     Running `target/release/profile-lookup 16000000 1000 10000 100 tries sort`
+	throughput: 5230218.53 elts/sec @ 1000000 elts
+	throughput: 4803007.07 elts/sec @ 2000000 elts
+	throughput: 3579488.81 elts/sec @ 3000000 elts
+	throughput: 3313328.56 elts/sec @ 4000000 elts
+	throughput: 3288689.38 elts/sec @ 5000000 elts
+	...
+	throughput: 316652.69 elts/sec @ 523000000 elts
+	throughput: 319958.04 elts/sec @ 524000000 elts
+	throughput: 745702.26 elts/sec @ 525000000 elts
+	throughput: 1317004.58 elts/sec @ 526000000 elts
+	...
+	throughput: 269572.39 elts/sec @ 1046000000 elts
+	throughput: 291515.14 elts/sec @ 1047000000 elts
+	throughput: 288647.49 elts/sec @ 1048000000 elts
+
+This looks like it might be settling on a 3/2x throughput improvement by batching 10x more queries together.
+
+There are even further optimizations one can do. The [trie crate](https://github.com/frankmcsherry/trie) doesn't support `get` but instead returns a cursor over keys, leaving a finger in each of the geometrically sized tries to remember where it was. For the shorter arrays, the finger is often quite near (or past) the next query, and exponentially increasing search can work much better than binary search. This is an interesting approach to consider, and we will talk about it more when we get to navigating around the per-key state, because we will do exactly this approach.
+
+Sorting doesn't much help a `HashMap`, in that it intentionally maps nearby keys to totally different locations. We could cheat a bit, and will mention this in just a few sections.
+
+### Building an index
+
+Can we combine the best of both worlds: the look-up speed of a `HashMap` and the density of `Tries`? 
+
+Yes, both in a fairly simple and direct way, and in a more sophisticated and only barely highlighted here way.
+
+#### The simple and direct way
+
+The `HashMap` is useful for quickly locating information about a key, but not such a great story for how to store all of our data. Why not use the `Tries` to store the data, and a `Hashmap` to help us recall exactly where we can find each key.
+
+More specifically, we could maintain a `HashMap<K, Vec<(usize, usize)>>` which for each key indicates a list of `(trie_id, offset)` pairs indicating the tries and offsets at which the key can be found. Looking up locations of data is now quite simple, as the `HashMap` has the data for us. Maintaining the index is also not very hard: as we naturally keep information about the youngest tries at the ends of these lists, when merging a key we just pop off the end and then push on the offset in the merged trie.
+
+Perhaps the easiest way to do this is to perform all of the merges we need to perform, record all observed keys (even the ones that were discarded due to cancellation), and then for each of these keys pop all entries from their list to tries that were merged, and if appropriate push one entry for the offset in the newly merged trie.
+
+Here is the logic for `Tries::add`, before the modification
+
+```rust
+/// Incorporates a new difference into the trace.
+fn add<Iter: Iterator<Item=(K,V,T,isize)>>(&mut self, diff: Iter) {
+
+    // collect iterator contents into a temporary buffer.
+    let mut buffer = Trie::from(diff);
+
+    // while the next smallest list is less than twice as large as the buffer, merge it in.
+    while self.tries.len() > 0 && self.tries[self.tries.len()-1].len() < 2 * buffer.len() {
+        buffer = merge(buffer, self.tries.pop().unwrap());
+    }
+
+    // <- new stuff about to go here!
+
+    self.tries.push(buffer);
+}
+```
+
+And here is a version afterwards, where `merge` also updates a supplied list of "discarded" keys.
+
+```rust
+/// Incorporates a new difference into the trace.
+fn add<Iter: Iterator<Item=(K,V,T,isize)>>(&mut self, diff: Iter) {
+
+    // collect iterator contents into a temporary buffer.
+    let mut buffer = Trie::from(diff);
+    let mut discard = Vec::new();
+
+    // while the next smallest list is less than twice as large as the buffer, merge it in.
+    while self.tries.len() > 0 && self.tries[self.tries.len()-1].len() < 2 * buffer.len() {
+        buffer = merge(buffer, self.tries.pop().unwrap(), &mut discard);
+    }
+
+    // trie ids this or greater should be discarded.
+    let valid = self.tries.len();
+
+    // drop entries for discarded keys.
+    for key in discard.drain(..) {
+    	if let Occupied(entry) = self.index.entry(key) {
+    		while entry.last().map(|x| x.1 >= valid) == Some(true) {
+    			entry.get_mut().pop();
+    		}
+    		if entry.get().len() == 0 {
+    			entry.remove();
+    		}
+    	}
+    }
+
+    // update entries for present keys
+    for (key, pos) in buffer.keys(..) {
+    	let entry = self.index.entry(key.clone()).or_insert(Vec::new());
+		while list.len() > 0 && list[list.len()-1].1 >= valid {
+			list.pop();
+		}
+		list.push((valid, pos));
+    }
+
+    self.tries.push(buffer);
+}
+```
+
+This approach gives us the look-up performance of the `HashMap` at the beginning of the section. The `Vec` as the value in the two `HashMap`s have the same size, and the same thing happens, again until we actually start looking at the data.
+
+In principle, we could remove the `Vec<(K, usize)>` vectors entirely, and store the `usize` information directly in the `HashMap` itself. Before we get too excited about this, let's think about how different a `HashMap` and a `Vec<K,_>` really are. It turns out they can be pretty similar.
+
+#### The more sophisticated way
+
+So far we have used the fact that keys are ordered to provide *some* order on keys, which is an important part of being able to merge the keys. However, nothing actually binds us to use *that* order on keys. We could choose a different order, if it would be helpful. Are there any other orders that are interesting?
+
+There are several hash map implementations, I'm thinking specifically of [Robin Hood Hashing](https://cs.uwaterloo.ca/research/tr/1986/CS-86-14.pdf), that maintain their set of `(key, val)` pairs in a flat array ordered by `(hash(key), key)`. The pairs are ordered by hash value, dropped in at locations proportional to each's hash, which is how given just its hash value we can zip to where a key should be. If there are collisions, we just scan forward until we either find the key or a value with a larger hash or key.
+
+We can choose to order keys by `(hash(key), key)` throughout, and replace our use of dense `Vec<(K, usize)>` arrays with slightly sparser Robin Hood hash maps. Each binary search is now replaced by a hash map look up. 
+
+Alternately, we can follow the suggestion above and replace *all* `Vec<(K, usize)>` entries with a single hash map containing their associated data. Using something like a Robin Hood hash map, we still maintain a relatively well packed vector with a clear order on keys, 
+
+I think this sounds like a great idea, but my Robin Hood hash map implemenation is a bit dusty. I'm travelling a bit in the next few days, so I'm going to take some time to clean up code and see what things look like. No performance numbers combining things just yet.
 
 ## Part 5: Navigation rather than enumeration.
 
