--- a/posts/2016-08-16.md
+++ b/posts/2016-08-16.md
@@ -1,24 +1,30 @@
 # Lunchtime for Data Privacy
 
-This post will be a bit of a philosophical one, about what privacy is and why we might choose to call things that. The story comes in the context of a paper [No Free Lunch in Data Privacy](http://www.cse.psu.edu/~duk17/papers/nflprivacy.pdf) which argues that one can't have everything when it comes to statistical analysis of private data: if you want some accuracy you have to give up some privacy.
+This post will be a bit of a philosophical one, about what privacy is and why we might choose to call things by that name. The story comes in the context of a paper [No Free Lunch in Data Privacy](http://www.cse.psu.edu/~duk17/papers/nflprivacy.pdf) which argues that one can't have everything when it comes to statistical analysis of private data: if you want some accuracy you have to give up some privacy.
 
-I think they are wrong, in that their definition of privacy fails to distinguish between "your secrets" and "secrets about you". 
+I don't agree, and the crux of the issue is "just what do you get to call 'privacy'?", a question that gets surprisingly little attention.
 
-The distinction between "your secrets" and "secrets about you" is important, not least because as a society we place great value on one's right to self-determination, and somewhat less value on one's right to image management. If we must trade away some secrets for accurate statistics in the common interest, it is helpful to distinguish the types of secrets we might be trading away, and it may be harmful to fail to distinguish them.
+Historically, privacy research has struggled to formally nail down a good formal definition of "privacy". There have been many, *many* definitions, though most of these are post-hoc characterizations of whatever the paper achieves as "privacy", rather than aspirational goals about what *should* be protected. Even the most successful definitions, say k-anonymity and differential privacy, are used primarily to describe properties of computations rather than to formalize our intuitive requirements of something that calls itself "privacy".
 
-To give an example, imagine you reveal to the world that you smoke, perhaps by smoking publicly, and independently the world learns through some health survey that smoking leads to increased health risks. From these two pieces of information we learn a little about you and your health risks. Prior to the survey's results your health risks may have been *a* secret, in the sense that they were not yet widely known, but they stopped being *your* secret when you made public the information that you smoke. I would argue that releasing the results of the health survey are not a data privacy violation (as you may not even have participated).
+This lack of clarity leads to confusion when people speak of things "not providing privacy" or being a "privacy breach", because (i) there are so many definitions of privacy, and (ii) it isn't clear whether the authors' beliefs about privacy have any bearing beyond the publication of their paper.
 
-While this may sound a bit fluffy, differential privacy formally distinguishes between "your secrets" and "secrets about you". Implementations of differential privacy demonstrate that you do *not* need to trade away any of "your secrets" to get some accurate statistical information. On the other hand, it does not guarantee that "secrets about you" remain (or ever were) secret, for a good reason we will get to.
+Let's take as an example the [Privacy in Pharmacogenetics](https://www.usenix.org/system/files/conference/usenixsecurity14/sec14-paper-fredrikson-privacy.pdf) paper, which [we previously discussed](). The paper describes an attack, *model inversion*, which predicts genenic markers through access to (i) other private data of yours, and (ii) correlations observed in other people between their genetic markers and their corresponding private data. They conclude that the disclosure of (ii) the correlations, again involving only the data of people not you, constitute an attack on your private data. 
 
-If you fancy this definition of data privacy for lunch (perhaps yours was eaten), it is on the house.
+Nothing written above is wrong in the factual sense, but it is rhetorically misleading. An attacker may indeed be able to learn about your private data, but it is in the same sense that someone who sees you in public may be able to make a guess about your weight. Although this could be annoying, should we call the understanding of the general correlation between size and weight a "privacy attack"? Is it really no different than revealing the same information directly from your most recent medical examination, which we likely *would* view as a breach of privacy? Should we distinguish these two, so that we might prevent one and worry less about the other?
+
+There is a valueable difference between "your secrets" and "secrets about you". As a society we place great value on one's right to self-determination, and somewhat less value on one's right to image management. We value one's ability to keep what secrets they have, but find it perhaps less reasonable to demand ignorance of others, even about one's self. If we must trade away some secrets for accurate statistics in the common interest, it is helpful to distinguish these two types of secrets we might be trading away, and it may be harmful to fail to distinguish them. We can (and should) argue about the relative costs and benefits of keeping each type of secret, but we must distinguish between them to have meaningful discussions.
+
+Differential privacy is a formal distinction between "your secrets" and "secrets about you". 
+
+Implementations of differential privacy formally demonstrate that you do *not* need to trade away any of "your secrets" to get some accurate statistical information. On the other hand, it does not guarantee that any "secret about you" remains (or indeed ever was) a secret, for the very important reason that such a guarantee is generally impossible.
+
+We are going to go a bit deeper on each of these points, and circle round to the No Free Lunch paper and its implications for data privacy generally, and differential privacy in particular. The authors claim to address misconceptions about differential privacy, but I worry that the introduce misconceptions of their own instead.
 
 ## No Free Lunch
 
 The No Free Lunch in Data Privacy paper is organized around a "[no free lunch](https://en.wikipedia.org/wiki/No_free_lunch_theorem)" type of theorem, one which says that for a technique to do one thing well, it must do other things badly. This makes some sense in the context of data privacy, where there is a tension between the two main goals, the privacy of individuals and accuracy across large populations. If you want to do one very well, you may need to do the other badly. 
 
 The theorem says that if you have a secret about a dataset---the authors give the example of reading the first record in the dataset---then any non-useless computation can take the secret from "totally secret" to "pretty much public". This would suck; records in the dataset feel very much like a "your secret" type of secret. 
-
-Fortunately (for us, not the authors), the proof is wrong and the theorem is false. 
 
 To understand, let's look at the definition of non-useless the authors use, which they call *discrimination*.
 
@@ -30,38 +36,38 @@ The theorem uses this intuition to reverse out the precise value of a secret, fr
 
 ![NoLunch](https://github.com/frankmcsherry/blog/blob/master/assets/nolunchforyou/nolunch.png)
 
-The proof picks datasets with different values of the secret as inputs, and asks the computation to discriminate between them, at which point it knows the input dataset and the secret. Unfortunately, the definition of discrimination doesn't require a computation to distinguish between *any* datasets, just *some* datasets. Maybe not *these* datasets.
+The proof picks datasets with different values of the secret as inputs, and asks the computation to discriminate between them, at which point it knows the input dataset and the secret. Unfortunately, the definition of discrimination doesn't require a computation to distinguish between *any* datasets, just *some* datasets. Maybe not *these* datasets. The proof doesn't hold, and indeed there are counter-examples to the theorem: consider a query which wants to read out my record, and a computation which says "buzz off" if my record is present in the input (but is otherwise discriminating).
 
-As a counter-example to the theorem, consider a query which wants to read out my record, and a computation which says "buzz off" if my record is present in the input (but is discriminating on inputs without my record). There are several values my record might take, but for any dataset where one is present the computation acts identically ("buzz off"). The attacker can learn if my record is present or absent (a non-"buzz off" answer), but learns nothing about its value.
+The theorem and proof can be fixed by changing the definitions and theorem somewhat; if nothing else, it is meant to be a simplification of [prior work by Cynthia Dwork and Moni Naor](https://www.microsoft.com/en-us/research/publication/differential-privacy/). The theorem's final form notwithstanding, the authors follow it with a clear example in which a discriminating computation fails to meet their standard for privacy. I'm going to paraphrase it in the language of our example of size and weight, but I think it is otherwise faithful to their example. 
 
-## No Free Breakfast
+> Consider a dataset where each entry is a pair of height and weight. Your secret is your weight. Imagine k datasets in which you have a distinct weight in each, and the density of the participants (ratio of weight to height) is distinct in each. Now any computation which reveals the average density across the dataset also reveals your weight.
 
-The No Free Lunch theorem is meant to be a simplification of [prior work by Cynthia Dwork and Moni Naor](https://www.microsoft.com/en-us/research/publication/differential-privacy/), in which they prove that any non-useless computation can reveal a secret to an appropriately informed attacker. While the No Free Lunch result may not be correct, does the prior more complex work nonetheless mean lunch cannot be cheaply had?
+The authors' conclusion is that what we require are more assumptions about how data are produced, as the flexibility to tie your specific weight to a broad statistical trend stresses the credibility of the example. But, let's change the example somewhat, and see that you get the same argument without implausible datasets.
 
-The No Free Lunch authors present their theorem as a simplified and consequently weaker version of Cynthia and Moni's, but it is actually a strictly stronger statement. Specifically, their result is false where as Cynthia and Moni's is not. That is a fairly unhelpful way to understand *how* Cynthia and Moni's result is weaker than the No Free Lunch claim. 
+> Consider a dataset where each entry is a pair of height and weight. Your secret is your density, because your height is public information. Imagine k datasets in each of which all participants have the same density, but with different densities for different datasets. Now any computation which reveals the average density across the dataset also reveals your density.
 
-To understand what Cynthia and Moni proved, let me try and paraphrase their result (not actually a quote).
+Again we have what is counted a privacy violation, where we have only introduced a common statistical property (density) to all participants. Is it implausible that all participants share some common statistical property? I don't think so. Is our understanding of privacy in any way improved by introducing mathematical assumptions on the data generation process that preclude this possibility? Again, I don't think so.
 
-> Imagine a computation that tells us something "non-obvious" about a dataset, in the sense that we don't already know the answer for sure. More specifically, imagine an attacker who doesn't know the answer for sure. What the attacker *does* know is that if the answer goes one way the secret is `A`, and if the answer goes the other way the secret is `B`. If the computation is run and an answer produced, the attacker is now certain of the secret! Oh noes!
+Any computation which reveals something about a dataset may reveal something about an individual. It's a fact.
 
-I've used "the secret" rather than "your secret", because the proof only works if your secret is first revealed to a third party, who can give a hint to the attacker. If you retain the ability to change your secret, perhaps because you haven't yet submitted your data, then the attacker still reaches the same conclusions with the same certainty, despite now being totally wrong. 
+## Privacy as agency
 
-The hypothetical attack only works against "secrets about you" rather than "your secrets".
+The definition of privacy as protecting arbitrary "secrets about you" has some fundamental issues. The most important one, in my mind, is agency: if the rest of the world can learn your secret without your help, it is not *your* secret. It may be *a* secret, currently, but this is only true for as long as the rest of the world isn't bothered enough to think too hard about it. The requirement that it remain a secret is a requirement made on the rest of the world, and how it is allowed to think. 
 
-If this all sounds like a bit of a mess, great! It was meant to demonstrate that so called "absolute" privacy definitions, those of the form "no one will learn secrets about you", are mostly hopeless. Anything non-useless can reveal a "secret about you", unless you wish to make restrictive assumptions about the attack and attacker.
+At the same time, protecting arbitrary "secrets about you" is a much stronger standard than is actually needed to provide meaningful and actionable privacy guarantees. When presented with the option to contribute data, I have two options (contribute, or don't) and only need to be re-assured that I will not regret participation. I might regret that someone is asking the questions they are, but if these conclusions would be reached with or without my participation I have no practical reason not to participate.
 
-At the same time, the stronger No Free Lunch statement, that anything non-useless can be made to reveal "your secret", is false.
+As mentioned before, differential privacy provides a guarantee that your secrets remain your secrets. Participation in a differentially private computation will reveal nothing that wouldn't be revealed without your participation. The results can say nothing that couldn't be learned without your data. Any secret you could keep before can still be kept. Secrets you could not keep might now have been revealed, but not because of your participation.
 
-The distinction between these two types of secrets, those you control and those you do not control, is exactly what lead us to define differential privacy as we did so many years back. 
+These guarantees hold with no assumption on how data are generated. 
 
-## Anyhow ...
+## Misconceptions
 
-The No Free Lunch paper continues to "address several popular misconceptions about differential privacy", that several "assumption-free" aspects of differential privacy are actually in error.
+The main body of the No Free Lunch paper addresses what they feel are "misconceptions" about differential privacy. I can't speak to how well understood it is (not, is my best guess), but the authors' clarifications are not entirely helpful.
 
-![Misconceptions](https://github.com/frankmcsherry/blog/blob/master/assets/nolunchforyou/misconceptions.png)
+![NoLunch](https://github.com/frankmcsherry/blog/blob/master/assets/nolunchforyou/misconceptions.png)
 
-To be clear, each of these statements are correct as written. Differential privacy protects "your secrets" without assumptions on data generation or attacker knowledge. The authors' treatment of them as misconceptions is predicated on at least one of (i) their theorem being true or (ii) data privacy meaning "secrets about you" rather than "your secrets". As we've read (i) isn't, and assumptions are needed for (ii) for any non-useless computation, differentially private or not.
+To be clear, these statements are true as written. Differential privacy makes no requirements of data generation, or what an attacker does or does not know. It provides the guarantee that your secrets are kept with no further assumptions.
 
-The authors do provide several examples where you might have felt entitled to "secrets about you" that are no longer "your secrets", for example when an authority compels the release of exact partial information from you (e.g. "you must smoke outdoors"). This seems like a healthy subject for research, but to the extent that an information disclosure can result without access to (or even the existence of) your data, I would not call it a privacy breach.
+The authors argue that differential privacy requires assumptions to protect "privacy" when privacy means "secrets about you". However, their arguments do not make the distinction made above, between "your secrets" and "secrets about you". To the extent that there are misconceptions about differential privacy's guarantee, I think they are largely that "secrets about you" is the privacy standard to expect.
 
-Obviously it is fun to call things "privacy", because you get a lot more traction when you do, but it might help readers to think harder about why that term is appropriate, and for authors to argue more clearly that it is. It would be especially helpful to be clear when you claim that techniques do not provide privacy, that you mean a form of privacy that has been proven impossible without further assumptions.
+While we can debate about whether one is entitled to force secrets about themselves onto others (the contentious [right to be forgotten](https://en.wikipedia.org/wiki/Right_to_be_forgotten) as an example), we should be able to do this without muddying the understanding of other more actionable (or, less impossible) guarantees.
