--- a/posts/2016-08-16.md
+++ b/posts/2016-08-16.md
@@ -70,4 +70,13 @@ To be clear, these statements are true as written. Differential privacy makes no
 
 The authors argue that differential privacy requires assumptions to protect "privacy" when privacy means "secrets about you". However, their arguments do not make the distinction made above, between "your secrets" and "secrets about you". To the extent that there are misconceptions about differential privacy's guarantee, I think they are largely that "secrets about you" is the privacy standard to expect.
 
-While we can debate about whether one is entitled to force secrets about themselves onto others (the contentious [right to be forgotten](https://en.wikipedia.org/wiki/Right_to_be_forgotten) as an example), we should be able to do this without muddying the understanding of other more actionable (or, less impossible) guarantees.
+While we can debate about whether one is entitled to force secrets about themselves onto others (e.g. the debate around the [right to be forgotten](https://en.wikipedia.org/wiki/Right_to_be_forgotten)), we should be able to do this without muddying the understanding of other more actionable (and less impossible) guarantees, as provided by differential privacy.
+
+As a concrete proposal, based on the right to be forgotten, consider using the following terms:
+
+* **Privacy**: protecting secrets that could only be revealed with your participation.
+
+* **Forgettability**: protecting secrets that could be revealed without your participation.
+
+I'm guessing that folks currently working with what is now "forgettability" are all "LOL! no.", but seriously, make the case that what you are about should be called privacy.
+
