--- a/posts/2016-08-16.md
+++ b/posts/2016-08-16.md
@@ -68,7 +68,7 @@ The main body of the No Free Lunch paper addresses what they feel are "misconcep
 
 To be clear, these statements are true as written. Differential privacy makes no requirements of data generation, or what an attacker does or does not know. It provides the guarantee that your secrets are kept with no further assumptions.
 
-The authors argue that differential privacy requires assumptions to protect "privacy" when privacy means "secrets about you". However, their arguments do not make the distinction made above, between "your secrets" and "secrets about you". To the extent that there are misconceptions about differential privacy's guarantee, I think they are largely that "secrets about you" is the privacy standard to expect.
+The authors argue that differential privacy requires further assumptions to protect "privacy", but only when privacy means "secrets about you"; their arguments do not make the distinction between "your secrets" and "secrets about you". To the extent that there are misconceptions about differential privacy's guarantee, I think they are largely that masking all "secrets about you" is the right privacy standard to expect.
 
 While we can debate about whether one is entitled to force secrets about themselves onto others (e.g. the debate around the [right to be forgotten](https://en.wikipedia.org/wiki/Right_to_be_forgotten)), we should be able to do this without muddying the understanding of other more actionable (and less impossible) guarantees, as provided by differential privacy.
 
